# LerpWithQuats

./: CMakeLists.txt  README.md  main.cpp
sources/: CMakeLists.txt  Ground.cpp  Ground.h  Interpolator.cpp  Interpolator.h  LerpWithQuats.cpp  LerpWithQuats.h  Spacecraft.cpp  Spacecraft.h  Utils.h
